# aws-static-website

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
tests/: test_static_website.py
