[project]
name = "aws-static-website"
version = "0.1.0"
description = "Atlantide published component: S3 + CloudFront static website"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "atlantide>=0.1.0",
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
